# thetvdb

./: LICENSE  README.md  TODO.org  thetvdb.cabal
Network/API/: TheTVDB.hs
Network/API/TheTVDB/: Fetch.hs  HTTP.hs  Mirrors.hs  Search.hs  Util.hs  XML.hs  Zipper.hs
Network/API/TheTVDB/Types/: API.hs  Config.hs  Context.hs  Episode.hs  Season.hs  Series.hs
Test/: Main.hs  episode.xml  search.xml  series.xml
example/: Main.hs
