-- http://www.haskell.org/cabal/users-guide/developing-packages.html
name:          thetvdb
version:       0.1.0.0
synopsis:      Haskell API bindings for http://thetvdb.com
homepage:      http://github.com/pjones/thetvdb
bug-reports:   http://github.com/pjones/thetvdb/issues
license:       MIT
license-file:  LICENSE
author:        Peter Jones <pjones@pmade.com>
maintainer:    Peter Jones <pjones@pmade.com>
copyright:     Copyright: (c) 2012-2013 Peter Jones <pjones@pmade.com>
category:      Network, API
stability:     experimental
tested-with:   GHC == 7.4.2, GHC == 7.6.3
build-type:    Simple
cabal-version: >=1.8
description:   TBD

extra-source-files:
  CHANGES
  README.md
  LICENSE

library
  exposed-modules: Network.API.TheTVDB
                   Network.API.TheTVDB.Util
                   Network.API.TheTVDB.Zipper
  other-modules:   Network.API.TheTVDB.Search
                   Network.API.TheTVDB.Fetch
                   Network.API.TheTVDB.XML
                   Network.API.TheTVDB.Types.API
                   Network.API.TheTVDB.Types.Context
                   Network.API.TheTVDB.Types.Series
                   Network.API.TheTVDB.Types.Season
                   Network.API.TheTVDB.Types.Episode

  build-depends: base <5
               , bytestring    >= 0.9.0 && < 0.10.1.0
               , conduit       >= 1.0.0 && < 1.2
               , containers    >= 0.4   && < 0.6
               , directory     >= 1.1   && < 1.3
               , http-conduit  >= 1.8   && < 1.9
               , http-types    >= 0.8   && < 0.9
               , monad-control >= 0.3   && < 0.4
               , network       >= 2.3   && < 2.5
               , old-locale    >= 1.0   && < 2.0
               , resourcet     >= 0.3   && < 0.5
               , safe          >= 0.3   && < 0.4
               , text          >= 0.11  && < 0.12
               , time          >= 1.2   && < 1.5
               , transformers  >= 0.2   && < 0.4
               , unix          >= 2.5   && < 2.7
               , unix-compat   >= 0.4   && < 0.5
               , xml-conduit   >= 1.0   && < 1.2
               , xml-types     >= 0.3   && < 0.4
               , zip-conduit   >= 0.2   && < 0.4

  ghc-options: -Wall

executable tvdb
  main-is: example/Main.hs
  ghc-options: -Wall -Werror
  build-depends: base
               , HUnit
               , conduit
               , bytestring
               , resourcet
               , http-types
               , xml-conduit
               , text
               , time
               , directory
               , http-conduit
               , containers
               , safe
               , old-locale
               , unix

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test/Main.hs
  ghc-options: -Wall -Werror
  build-depends: base
               , HUnit
               , conduit
               , bytestring
               , resourcet
               , http-types
               , xml-conduit
               , text
               , time
               , directory
               , http-conduit
               , containers
               , safe
               , old-locale

source-repository head
  type: git
  location: git://github.com/pjones/thetvdb.git
